// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`experiment-basic registers an experiment and sends normalized experiment logs > logs3-payloads 1`] = `
[
  {
    "api_version": 2,
    "rows": [
      {
        "_is_merge": false,
        "context": {
          "caller_filename": "<repo>/e2e/scenarios/experiment-basic.ts",
          "caller_functionname": "main",
          "caller_lineno": 13,
        },
        "created": "<timestamp>",
        "experiment_id": "experiment:logger-e2e",
        "id": "<span:1>",
        "input": {
          "prompt": "Run an evaluation",
          "testRunId": "<run:1>",
        },
        "metadata": {
          "testRunId": "<run:1>",
        },
        "metrics": {
          "start": 0,
        },
        "root_span_id": "<span:2>",
        "span_attributes": {
          "exec_counter": 0,
          "name": "experiment-root",
          "type": "eval",
        },
        "span_id": "<span:2>",
      },
    ],
  },
  {
    "api_version": 2,
    "rows": [
      {
        "_is_merge": true,
        "expected": {
          "completion": "done",
        },
        "experiment_id": "experiment:logger-e2e",
        "id": "<span:1>",
        "metadata": {
          "record": "sample-1",
          "scenario": "experiment-basic",
          "testRunId": "<run:1>",
        },
        "metrics": {
          "end": 0,
        },
        "output": {
          "completion": "done",
        },
        "root_span_id": "<span:2>",
        "scores": {
          "pass": 1,
        },
        "span_id": "<span:2>",
      },
      {
        "context": {
          "caller_filename": "<repo>/e2e/scenarios/experiment-basic.ts",
          "caller_functionname": "experiment.traced.name",
          "caller_lineno": 32,
        },
        "created": "<timestamp>",
        "experiment_id": "experiment:logger-e2e",
        "id": "<span:3>",
        "input": {
          "testRunId": "<run:1>",
          "tool": "lookup",
        },
        "metadata": {
          "stage": "child",
          "testRunId": "<run:1>",
        },
        "metrics": {
          "end": 0,
          "start": 0,
        },
        "output": {
          "status": "success",
          "tool": "lookup",
        },
        "root_span_id": "<span:2>",
        "span_attributes": {
          "exec_counter": 1,
          "name": "tool-span",
        },
        "span_id": "<span:4>",
        "span_parents": [
          "<span:2>",
        ],
      },
    ],
  },
]
`;

exports[`experiment-basic registers an experiment and sends normalized experiment logs > root-span 1`] = `
{
  "context": {
    "caller_filename": "<repo>/e2e/scenarios/experiment-basic.ts",
    "caller_functionname": "main",
    "caller_lineno": 13,
  },
  "created": "<timestamp>",
  "expected": {
    "completion": "done",
  },
  "experiment_id": "experiment:logger-e2e",
  "id": "<span:1>",
  "input": {
    "prompt": "Run an evaluation",
    "testRunId": "<run:1>",
  },
  "metadata": {
    "record": "sample-1",
    "scenario": "experiment-basic",
    "testRunId": "<run:1>",
  },
  "metrics": {
    "end": 0,
    "start": 0,
  },
  "output": {
    "completion": "done",
  },
  "root_span_id": "<span:2>",
  "scores": {
    "pass": 1,
  },
  "span_attributes": {
    "exec_counter": 0,
    "name": "experiment-root",
    "type": "eval",
  },
  "span_id": "<span:2>",
}
`;

exports[`experiment-basic registers an experiment and sends normalized experiment logs > tool-span 1`] = `
{
  "context": {
    "caller_filename": "<repo>/e2e/scenarios/experiment-basic.ts",
    "caller_functionname": "experiment.traced.name",
    "caller_lineno": 32,
  },
  "created": "<timestamp>",
  "experiment_id": "experiment:logger-e2e",
  "id": "<span:1>",
  "input": {
    "testRunId": "<run:1>",
    "tool": "lookup",
  },
  "metadata": {
    "stage": "child",
    "testRunId": "<run:1>",
  },
  "metrics": {
    "end": 0,
    "start": 0,
  },
  "output": {
    "status": "success",
    "tool": "lookup",
  },
  "root_span_id": "<span:3>",
  "span_attributes": {
    "exec_counter": 1,
    "name": "tool-span",
  },
  "span_id": "<span:2>",
  "span_parents": [
    "<span:3>",
  ],
}
`;
